GNOME Bugzilla – Bug 776431
dashdemux: Fix regression of On-Demand profile mpd playback
Last modified: 2016-12-23 10:17:42 UTC
Fix test fail of gst-validate test case (exMPD_BIP_TC1) by previous sidx related patches exMPD_BIP_TC1.mpd on gst-validate has two special feature - Only "BaseURL" element exist (no header url info such as indexRange) - Sidx box has non-zero "first_offset" value Note that, sidx has "first_offset" syntax which represents the distance in bytes from anchor point to media fragment. Here, the anchor point is the next byte of end of sidx box. Usually, the first media fragment located right after sidx box (in this case first_offset should be zero). However, if there are addtional top level boxes between sidx and the first moof, the "first_offset" value in sidx box has non-zero value.
Created attachment 342406 [details] [review] dashdemux: Ensure sidx parsing when updating fragment info Fix seek fail with On-Demand profile mpd which has no indexRange attribute
Created attachment 342407 [details] [review] dashdemux: Add first_offset of sidx box to base offset sidx has "first_offset" syntax which represents the distance in bytes from anchor point to media fragment. If present, we should adjust sidx_base_offset.
Attachment 342406 [details] pushed as c0540fb - dashdemux: Ensure sidx parsing when updating fragment info Attachment 342407 [details] pushed as 4523cff - dashdemux: Add first_offset of sidx box to base offset