dashdemux: Ensure sidx parsing when updating fragment info

Fix seek fail with On-Demand profile mpd which has no indexRange attribute

https://bugzilla.gnome.org/show_bug.cgi?id=776431